// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`callProcedure > should handle a basic call 1`] = `
{
  "amountSpent": "0x296a6",
  "createdAddresses": [],
  "executionGasUsed": "0xc62",
  "gas": "0x1c964d6",
  "logs": [],
  "rawData": "0x00000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct": [],
  "totalGasSpent": "0x5eaa",
}
`;

exports[`callProcedure > should handle a call with state override 1`] = `
{
  "amountSpent": "0x23e38",
  "executionGasUsed": "0x0",
  "rawData": "0x",
  "totalGasSpent": "0x5208",
}
`;

exports[`callProcedure > should handle errors from callHandler 1`] = `
{
  "code": -32602,
  "data": {
    "errors": [
      "value must be a hex string

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73",
    ],
  },
  "message": "value must be a hex string

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73",
}
`;

exports[`callProcedure should handle a basic call 1`] = `
{
  "amountSpent": "0x296a6",
  "createdAddresses": [],
  "executionGasUsed": "0xc62",
  "gas": "0x1c964d6",
  "logs": [],
  "rawData": "0x00000000000000000000000000000000000000000000000000000000000000200000000000000000000000000000000000000000000000000000000000000000",
  "selfdestruct": [],
  "totalGasSpent": "0x5eaa",
}
`;

exports[`callProcedure should handle a call with state override 1`] = `
{
  "amountSpent": "0x23e38",
  "executionGasUsed": "0x0",
  "rawData": "0x",
  "totalGasSpent": "0x5208",
}
`;

exports[`callProcedure should handle errors from callHandler 1`] = `
{
  "code": -32602,
  "data": {
    "errors": [
      
"Invalid Address 0x$asdf

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73"
,
    ],
  },
  "message": 
"Invalid Address 0x$asdf

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidtoerror/
Version: 1.1.0.next-73"
,
}
`;
